@@ -49,6 +49,7 @@ import com.vaadin.flow.component.html.OrderedList.NumberingType;
 import com.vaadin.flow.internal.StateNode;
 import com.vaadin.flow.internal.change.NodeChange;
 import com.vaadin.flow.server.AbstractStreamResource;
+import com.vaadin.flow.server.streams.DownloadHandler;
 
 public class HtmlComponentSmokeTest {
 
@@ -137,7 +138,8 @@ public class HtmlComponentSmokeTest {
             // Test that all setters produce a result
             testSetters(instance);
         } catch (InstantiationException | IllegalAccessException
-                | IllegalArgumentException | InvocationTargetException e) {
+                | IllegalArgumentException | InvocationTargetException
+                | NoSuchMethodException e) {
             throw new RuntimeException(e);
         }
     }
@@ -201,12 +203,6 @@ public class HtmlComponentSmokeTest {
     }
 
     private static boolean isSpecialSetter(Method method) {
-        // Shorthand for Label.setFor(String)
-        if (method.getDeclaringClass() == Label.class
-                && method.getName().equals("setFor")
-                && method.getParameterTypes()[0] == Component.class) {
-            return true;
-        }
         if (method.getDeclaringClass() == NativeLabel.class
                 && method.getName().equals("setFor")
                 && method.getParameterTypes()[0] == Component.class) {
@@ -245,6 +241,29 @@ public class HtmlComponentSmokeTest {
 
         if (method.getDeclaringClass() == FieldSet.class
                 && method.getName().startsWith("setContent")) {
+            return true;
+        }
+
+        if (method.getDeclaringClass() == IFrame.class
+                && method.getName().startsWith("setSrc")) {
+            return true;
+        }
+
+        if (method.getDeclaringClass() == HtmlObject.class
+                && method.getName().startsWith("setData")
+                && method.getParameterTypes()[0] == DownloadHandler.class) {
+            return true;
+        }
+
+        if (method.getDeclaringClass() == Anchor.class
+                && method.getName().startsWith("setHref")
+                && method.getParameterTypes()[0] == DownloadHandler.class) {
+            return true;
+        }
+
+        if (method.getDeclaringClass() == Image.class
+                && method.getName().startsWith("setSrc")
+                && method.getParameterTypes()[0] == DownloadHandler.class) {
             return true;
         }
 
@@ -355,12 +374,13 @@ public class HtmlComponentSmokeTest {
 
     private static HtmlComponent createInstance(
             Class<? extends HtmlComponent> clazz)
-            throws InstantiationException, IllegalAccessException {
+            throws InstantiationException, IllegalAccessException,
+            NoSuchMethodException, InvocationTargetException {
         Supplier<HtmlComponent> constructor = customConstructors.get(clazz);
         if (constructor != null) {
             return constructor.get();
         } else {
-            return clazz.newInstance();
+            return clazz.getDeclaredConstructor().newInstance();
         }
     }
 
